# doc-stream

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.app.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_enrichment_results.py  0003_job_chunk_count.py  0004_processed_events.py  0005_document_view.py
deploy/helm/docstream/: Chart.yaml  values.yaml
deploy/helm/docstream/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  dashboard.yaml  exporters.yaml  gateway.yaml  infra.yaml  ingress.yaml  job-bootstrap.yaml  observability.yaml  query.yaml  secret.yaml  workers.yaml
deploy/kind/: kind-config.yaml
scripts/: create_topics.py
src/docstream/: __init__.py
src/docstream/common/: __init__.py  config.py  events.py  health.py  http_metrics.py  messaging.py  metrics.py  retry.py  topics.py
src/docstream/db/: __init__.py  base.py  idempotency.py  models.py  outbox.py
src/docstream/enrichment/: __init__.py  chunking.py  embedding.py  llm.py  qdrant_store.py  worker.py
src/docstream/extraction/: __init__.py  text.py  worker.py
src/docstream/gateway/: __init__.py  app.py  relay.py  schemas.py  service.py
src/docstream/projection/: __init__.py  worker.py
src/docstream/query/: __init__.py  app.py  generation.py  prompts.py  retrieval.py  schemas.py  service.py
src/docstream/storage/: __init__.py  base.py  local.py  s3.py
tests/: conftest.py  test_enrichment.py  test_events.py  test_extraction.py  test_gateway_api.py  test_health.py  test_idempotency.py  test_metrics.py  test_outbox.py  test_projection.py  test_query.py  test_retry_dlq.py  test_storage.py
tests/integration/: conftest.py  test_kafka_messaging.py  test_migrations.py  test_pipeline_e2e.py  test_qdrant_contract.py  test_storage_s3.py
