[project]
name = "docstream"
version = "0.1.0"
description = "Event-driven AI document pipeline: FastAPI -> Kafka -> workers -> Postgres + Qdrant, on Kubernetes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chetan" }]

dependencies = [
    # API + config
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Kafka (async, pairs with FastAPI)
    "aiokafka>=0.11",
    # State store
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Idempotency / dedup
    "redis>=5.0",
    # Vector store client (used from Week 2)
    "qdrant-client>=1.9",
    # PDF text extraction
    "pypdf>=4.2",
    # Enrichment (Week 2): chunking + embedding + LLM
    "langchain-text-splitters>=0.2",
    "openai>=1.30",
    "anthropic>=0.30",
]

# Dev tooling lives in a dependency-group so `uv sync` / `uv run` install it
# automatically (no `--extra dev` needed).
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[kafka,postgres]>=4.5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docstream"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: needs a Docker daemon (testcontainers); excluded from the default run",
]
# Integration tests are slow and require Docker, so they're opt-in:
#   make test              -> unit only
#   make test-integration  -> the Docker-backed suite
addopts = "-m 'not integration'"
